crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_field_with_default__test__default_random_with_args_err.snap
---
source: crates/squawk_linter/src/rules/adding_field_with_default.rs
expression: errors
---
[
    Violation {
        code: AddingFieldWithDefault,
        message: "Adding a generated column requires a table rewrite with an `ACCESS EXCLUSIVE` lock.",
        text_range: 80..88,
        messages: [
            "Add the column as nullable, backfill existing rows, and add a trigger to update the column on write instead.",
        ],
    },
]
